[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 96.0
margin_top = 30.0
margin_right = 224.0
margin_bottom = 149.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 128.0
margin_bottom = 119.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 111.0
rect_min_size = Vector2( 112, 103 )
custom_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "PAUESED"
align = 1
valign = 1

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 18.0
margin_right = 104.0
margin_bottom = 42.9516
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RESUME"

[node name="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 48.0
margin_right = 104.0
margin_bottom = 72.9516
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OPTIONS"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 78.0
margin_right = 104.0
margin_bottom = 102.952
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT TO MENU"
